test/negative/214_field_on_int.err
214_field_on_int.fx:2:10: error: attempt to treat non-record and non-variant as a record
 2 | val x = (5).foo
   |          ^

1 errors occured during type checking.
